# CaCoMo

./: .gitignore  config.yaml  error_analysis.csv  error_report_pos.txt  pyproject.toml  readme.md  run.py  test_results.csv
files/dataset/: testing.txt
files/dataset/finetune/: training copy.txt  training.txt
files/dataset/full_model/: training.txt  validation.txt
files/original/: a_journey_of_joy.txt  dare_devil.txt  test.txt  the_room.txt
files/testing/finetuned/: comparison_results copy.csv  test_results.csv  test_script_output.txt
files/testing/pos_tag/: error_report_pos.txt  output.txt
models/full_model/: config.json
models/lora_adapter/: adapter_config.json  adapter_model.safetensors
results/checkpoint-1968/: adapter_model.safetensors  optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
results/checkpoint-2952/: README.md  optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
results/checkpoint-984/: adapter_model.safetensors  optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
source/: dataset_builder.py  tester.py
source_bert/: initial_setup.py  model_trainer.py  tester.py
source_finetune/: finetuner copy.py  finetuner.py  tester.py
source_pos_tagging/: pos_base_corrector.py  tester.py
tiny_model/: generation_config.json
